Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Dec-2009 Andrew Eddie
 # Fixed JHtmlSelect::options so that empy labels would not be translated.
 # Fixed duplicate support for com_modules.

12-Dec-2009 Louis Landry
 ^ Merged in refactored banners component thanks to Christophe Demko.
 ! Removed trailing whitespace.

12-Dec-2009 Sam Moffatt
 ! First commit from 32,000 feet
 # Alteration to JError:getErrors to fix an error temporarily
 ^ propset svn:keywords Id on a few files
 ^ General documentation clean up

11-Dec-2009 Louis Landry
 ^ [#18958] Administrator > Site > System Information > Directory Permissions (images/stories/) - Thanks Ryan Briscall
 ^ Clean up of reference operators as they aren't needed in PHP5 - Thanks Joe LeBlanc

11-Dec-2009 Andrew Eddie
 # Doc updates to JModelList, internal refuddling.
 # Fix bugs in JForm package dependency inclusions; code formatting.
 # Fix bug in menu item model (rebuildTree not a valid method).
 ^ Removed spaces from mod_menu frontend to help with inline styling.
 ^ Added support back into mod_menu for start and end level.

09-Dec-2009 Sam Moffatt
 ^ Committed patch for JCache care of Roben Goethals
 # Change to the installation SQL for the extensions table
 ^ Start of refactoring for the extensions manager
 # Minor fixes for modules updates and updates in general

07-Dec-2009 Andrea Tarr
# Allow admin templates to install correctly

01-Dec-2009 Ron Severdia
+ Added CSS for required fields

01-Dec-2009 Ron Severdia
+ Added Blueprint framework for Atomic template

30-Nov-2009 Mark Dexter
^ Remove Category level parameters for articles
# Fix bug where category metadata wasn't saving to database
# Replace eregi with stripos in contact and weblinks table check
# Fix error when saving a contact with a link URL
